--- a/images/images.css
+++ b/images/images.css
@@ -1,26 +1,22 @@
 /* Slider */
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-body {
-     overflow-x: hidden; 
-     font-family: roboto; 
-     -webkit-font-smoothing: antialiased; 
-     margin: 0;}
+body { overflow-x: hidden; font-family: Georgia; -webkit-font-smoothing: antialiased; }
 .flex  
-{   display: flex; 
-    -webkit-flex-direction: row;  
+{   display: flex;  
     flex-direction: row; 
-    -webkit-justify-content: flex-start; 
-    justify-content: flex-start;}
-
+    justify-content: flex-start; 
+                             
+}
 .slider-wrapper div {
   position: relative;
-  border-radius: 10px;
+  border-radius: 15px;
+  
 }
 
 .slider-wrapper {
+  
   margin-top: 5vw;
   margin-left: 5vw;
+  
 }
 
 .slide-image {
@@ -38,15 +34,13 @@ body {
   height: 36vw;
   max-height: 620px;
   max-width: 300px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .slide-content {
   width: 56vw;
   height: fit-content;
-  min-height: fit-content;
   color: #fff;
-  padding: 2vw;
   padding: 1.5vw;
   background-color: rgba(16, 7, 100, 0.562);
   margin-right: 2vw;
@@ -73,8 +67,8 @@ body {
 }
 
 .arrows {
-  width: 4vw;
-  margin-top: 12px;
+  width: 6vw;
+  margin-top: 17px;
   margin-left: 50vw;
   position: absolute;
 }
@@ -86,18 +80,16 @@ body {
   height: 1.2vw;
   background: transparent;
   text-indent: -9999px;
-  border-top: 0.25vw solid #fff;
-  border-left: 0.25vw solid #fff;
+  border-top: 0.45vw solid #fff;
+  border-left: 0.45vw solid #fff;
   transition: all .1s ease-in-out;
   text-decoration: none;
   color: transparent;
 }
-
 .arrow:hover {
   border-color: #0A8ACB;
-  border-width: 0.25vw;
+  border-width: 0.55vw;
 }
-
 .arrow:before {
   display: block;
   height: 200%;
@@ -107,22 +99,21 @@ body {
   content: "";
   transform: rotate(45deg);
 }
-
 .arrow.prev {
   transform: rotate(-45deg);
   left: 0;
 }
-
 .arrow.next {
   transform: rotate(135deg);
   right: 0;
 }
+
 @media screen and (max-width: 700px) {
+    
     .slide-image {
             width: 36vw;
             height: 72vw;
     }
-
     .slide-image1 img {
             width: 36vw;
             height: 64vw;
@@ -133,33 +124,43 @@ body {
     }
     .slide-content  {
             width: 56vw;
-            min-height: fit-content;           
+            min-height: 36vw; 
+            max-height: fit-content;
     }
     .slide-text {
             font-size: 14px;
-            line-height: 3vw;
+            line-height: 2.8vw;
+            justify-content: space-between;
             opacity: 1;                  
     }
     .arrows {
-            width: 8vw;
+            margin-top: 5vw;
+            min-width: 28px;
+            min-height: 20px;
             margin-left: 50%;
             transform: translateX(-50%);
     }
     .arrow {
-            width: 2vw;
-            height: 2vw;
-            border-top: 0.5vw solid #fff;
-            border-left: 0.5vw solid #fff;
+            width: 6vw;
+            height: 6vw;
+            border-top: 5.9vw solid #fff;
+            border-left: 5.9vw solid #fff;
     }
     .slider-wrapper {
-            margin-top: 7vw;
+            margin-top: 10vw;
             margin-left: 4vw;
     }
   }
 
 @media screen and (max-width: 950px) {
+    body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); z-index: -1; }
+    .slider-wrapper {
+            margin-top: 7vw;
+            margin-left: 4vw;
+}
     .arrows {
-            width: 6vw;
+            width: 8vw;
+            margin-top: 3vw;
             margin-left: 50%;
             transform: translateX(-50%);
     }
@@ -171,25 +172,25 @@ body {
             border-left: 0.5vw solid #fff;
     }
     .slide-image {
-      width: 28vw;
-      height: 56vw;
+            width: 28vw;
+            height: 56vw;
   	  }
     .slide-image1 img {
-      width: 28vw;
-      height: 46vw;
+            width: 28vw;
+            height: 46vw;
       }
     .slide-image img {
-      width: 28vw;
-      height: 56vw;
+            width: 28vw;
+            height: 56vw;
       }
     .slide-content  {
-      width: 62vw;
-      min-height: 360px; 
+            width: 62vw;
+            min-height: 360px; 
       }
     .slide-text {
-      font-size: 16px;
-      line-height: 3vw;
-      opacity: 1;                   
+            font-size: 16px;
+            line-height: 3vw;
+            opacity: 1;                   
     }
 }
 
