--- a/images/images.css
+++ b/images/images.css
@@ -88,7 +88,7 @@ body { overflow-x: hidden; font-family: Georgia; -webkit-font-smoothing: antiali
 }
 .arrow:hover {
   border-color: #0A8ACB;
-  border-width: 0.55vw;
+  border-width: 0.85vw;
 }
 .arrow:before {
   display: block;
@@ -108,68 +108,30 @@ body { overflow-x: hidden; font-family: Georgia; -webkit-font-smoothing: antiali
   right: 0;
 }
 
-@media screen and (max-width: 700px) {
-    
-    .slide-image {
-            width: 36vw;
-            height: 72vw;
-    }
-    .slide-image1 img {
-            width: 36vw;
-            height: 64vw;
-    }
-    .slide-image img {
-            width: 36vw;
-            height: 72vw;
-    }
-    .slide-content  {
-            width: 56vw;
-            min-height: 36vw; 
-            max-height: fit-content;
-    }
-    .slide-text {
-            font-size: 14px;
-            line-height: 2.8vw;
-            justify-content: space-between;
-            opacity: 1;                  
-    }
-    .arrows {
-            margin-top: 5vw;
-            min-width: 28px;
-            min-height: 20px;
-            margin-left: 50%;
-            transform: translateX(-50%);
-    }
-    .arrow {
-            width: 6vw;
-            height: 6vw;
-            border-top: 5.9vw solid #fff;
-            border-left: 5.9vw solid #fff;
-    }
-    .slider-wrapper {
-            margin-top: 10vw;
-            margin-left: 4vw;
-    }
-  }
+@media screen and (min-width: 1600px) {
+            
+  .slider-wrapper {margin-top: 46px;}
+}
+
 
 @media screen and (max-width: 950px) {
     body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); z-index: -1; }
     .slider-wrapper {
-            margin-top: 7vw;
+            margin-top: 10vw;
             margin-left: 4vw;
 }
     .arrows {
-            width: 8vw;
-            margin-top: 3vw;
+            width: 14vw;
+            margin-top: 5vw;
             margin-left: 50%;
             transform: translateX(-50%);
     }
 
     .arrow {
-            width: 2vw;
-            height: 2vw;
-            border-top: 0.5vw solid #fff;
-            border-left: 0.5vw solid #fff;
+            width: 2.5vw;
+            height: 2.5vw;
+            border-top: 0.75vw solid #fff;
+            border-left: 0.75vw solid #fff;
     }
     .slide-image {
             width: 28vw;
@@ -186,18 +148,62 @@ body { overflow-x: hidden; font-family: Georgia; -webkit-font-smoothing: antiali
     .slide-content  {
             width: 62vw;
             min-height: 360px; 
+            max-height: fit-content;
       }
     .slide-text {
-            font-size: 16px;
-            line-height: 3vw;
+            font-size: 1em;
+            line-height: 1.2em;
             opacity: 1;                   
     }
 }
 
-@media screen and (min-width: 1600px) {
-            
-    .slider-wrapper {margin-top: 46px;}
+@media screen and (max-width: 700px) {
+    
+  .slide-image {
+          width: 36vw;
+          height: 72vw;
+  }
+  .slide-image1 img {
+          width: 36vw;
+          height: 64vw;
+  }
+  .slide-image img {
+          width: 36vw;
+          height: 72vw;
+  }
+  .slide-content  {
+          width: 56vw;
+          min-height: 36vw; 
+          max-height: fit-content;
+  }
+  .slide-text {
+          font-size: 1em;
+          line-height: 1.2em;
+          opacity: 1;                  
+  }
+  .arrows {
+          width: 20vw;
+          margin-top: 5vw;
+          margin-left: 50%;
+          transform: translateX(-50%);
+  }
+  .arrow {
+          width: 5vw;
+          height: 5vw;
+          border-top: 1.6vw solid #fff;
+          border-left: 1.6vw solid #fff;
+  }
+  .arrow:hover {
+    border-color: #0A8ACB;
+    border-width: 1.55vw;
+  }
+  .slider-wrapper {
+          margin-top: 13vw;
+          margin-left: 4vw;
+  }
 }
+
+
   
 
 
