--- a/c-t-k.css
+++ b/c-t-k.css
@@ -97,7 +97,7 @@
         display: flex;
     }
     .wrapper .content { 
-        font-size: 21px;
+        font-size: 1.1em;
         font: light 1.8rem "poppins", sans-serif;
         
     }
