--- a/images/images.css
+++ b/images/images.css
@@ -1,22 +1,19 @@
 /* Slider */
 body { overflow-x: hidden; font-family: Georgia; -webkit-font-smoothing: antialiased; }
 .flex  
-{   display: flex;  
+{ 
+    display: flex;  
     flex-direction: row; 
-    justify-content: flex-start; 
-                             
+    justify-content: flex-start;
 }
 .slider-wrapper div {
   position: relative;
-  border-radius: 15px;
-  
+  border-radius: 15px; 
 }
 
 .slider-wrapper {
-  
   margin-top: 5vw;
   margin-left: 5vw;
-  
 }
 
 .slide-image {
@@ -115,18 +112,41 @@ body { overflow-x: hidden; font-family: Georgia; -webkit-font-smoothing: antiali
 
 
 @media screen and (max-width: 950px) {
-    body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); z-index: -1; }
+  body  { position: fixed; width: 100%; height: 150%; overflow: auto;}
     .slider-wrapper {
             margin-top: 10vw;
             margin-left: 4vw;
-}
+    }
+    .slide-image {
+            width: 28vw;
+            height: 56vw;
+  	  }
+    .slide-image1 img {
+            width: 28vw;
+            height: 46vw;
+      }
+    .slide-image img {
+            width: 28vw;
+            height: 56vw;
+    }
+    .slide-image {
+            width: 28vw;
+            height: 56vw;
+  	  }
+    .slide-image1 img {
+            width: 28vw;
+            height: 46vw;
+      }
+    .slide-image img {
+            width: 28vw;
+            height: 56vw;
+      }
     .arrows {
             width: 14vw;
             margin-top: 5vw;
             margin-left: 50%;
             transform: translateX(-50%);
     }
-
     .arrow {
             width: 2.5vw;
             height: 2.5vw;
@@ -158,7 +178,13 @@ body { overflow-x: hidden; font-family: Georgia; -webkit-font-smoothing: antiali
 }
 
 @media screen and (max-width: 700px) {
-    
+  body::before  {
+          background: black; position: fixed; width: 100%; height: 150%;}
+  
+  .slider-wrapper {
+          overflow-y: auto;
+          max-height: 65vh;
+  }
   .slide-image {
           width: 36vw;
           height: 72vw;
