--- a/n-t.css
+++ b/n-t.css
@@ -53,7 +53,7 @@
     left: 0;
     width: 280px;
     height: 100%;
-    background: radial-gradient(rgb(82, 82, 82),black);
+    background: black;
     animation: animatetoplayer 10s linear infinite;
     
 }
