--- a/box.css
+++ b/box.css
@@ -33,7 +33,7 @@
 .box span {
     position: absolute;
     inset: 4px;
-    background: radial-gradient(rgb(82, 82, 82),black);
+    background: black;
     border-radius: 16px;
     z-index: 1;
 }
